--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(04)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(04 main.cpp list.cpp Sales.cpp Sales.h extractor.cpp extractor.h)
+add_executable(04 main.cpp list.cpp Sales.cpp Sales.h extractor.cpp extractor.h Date.cpp Date.h)
